Fix search bar issue on small screens

--- a/src/static/css/root.css
+++ b/src/static/css/root.css
@@ -8,7 +8,7 @@ body {
 }
 
 .page-top {
-  height: 50px;
+  /*height: 50px;*/
 }
 
 .page-middle {
